tests/snapshots/insta_test__binary_literal-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Expr(
                            ConvExpr {
                                kind: Assign(
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                    ConvExpr {
                                        kind: Num(
                                            15,
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            pos: Position {
                                                n_char: 16,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                debug_info: DebugInfo {
                                    pos: Position {
                                        n_char: 8,
                                        n_line: 2,
                                    },
                                },
                            },
                        ),
                    ],
                ),
                stack_size: 4,
            },
        ),
    ],
}
