tests/snapshots/insta_test__bit_wise_and-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Return(
                                    Expr {
                                        kind: Binary(
                                            Binary {
                                                kind: BitWiseAnd,
                                                lhs: Expr {
                                                    kind: Num(
                                                        7,
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "",
                                                            src: "\n    int main() {\n        return 0b111 & 0b101;\n    }\n    ",
                                                        },
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 2,
                                                        },
                                                    },
                                                },
                                                rhs: Expr {
                                                    kind: Num(
                                                        5,
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "",
                                                            src: "\n    int main() {\n        return 0b111 & 0b101;\n    }\n    ",
                                                        },
                                                        pos: Position {
                                                            n_char: 21,
                                                            n_line: 2,
                                                        },
                                                    },
                                                },
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int main() {\n        return 0b111 & 0b101;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 19,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "",
                    src: "\n    int main() {\n        return 0b111 & 0b101;\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
    ],
}
